// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileIcon should render known file type icons 1`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main doc"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      DOC
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 2`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main docx"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      DOCX
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 3`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main heic"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      HEIC
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 4`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main jpg"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      JPG
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 5`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main mov"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      MOV
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 6`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main mp4"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      MP4
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 7`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main pdf"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      PDF
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 8`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main png"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      PNG
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 9`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main rtf"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      RTF
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 10`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main txt"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      TXT
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 11`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main xls"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      XLS
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 12`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main xlsx"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      XLSX
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 13`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main xml"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      XML
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 14`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main zip"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      ZIP
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 15`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main avi"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      AVI
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 16`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main mp3"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <text
      fill="#fff"
      font-size="6.5"
      font-weight="700"
      text-anchor="middle"
      x="16"
      y="23"
    >
      MP3
    </text>
  </svg>
</div>
`;

exports[`FileIcon should render known file type icons 17`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main unknown"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <path
      d="M12.7071 4.70711C13.0976 4.31658 13.0976 3.68342 12.7071 3.29289C12.3166 2.90237 11.6834 2.90237 11.2929 3.29289L8 6.58579L4.70711 3.29289C4.31658 2.90237 3.68342 2.90237 3.29289 3.29289C2.90237 3.68342 2.90237 4.31658 3.29289 4.70711L6.58579 8L3.29289 11.2929C2.90237 11.6834 2.90237 12.3166 3.29289 12.7071C3.68342 13.0976 4.31658 13.0976 4.70711 12.7071L8 9.41421L11.2929 12.7071C11.6834 13.0976 12.3166 13.0976 12.7071 12.7071C13.0976 12.3166 13.0976 11.6834 12.7071 11.2929L9.41421 8L12.7071 4.70711Z"
      fill="#9e9e9e"
      transform="translate(8,12)"
    />
  </svg>
</div>
`;

exports[`FileIcon should render unknown file type icon 1`] = `
<div>
  <svg
    height="32"
    viewBox="0 0 32 32"
    width="32"
  >
    <path
      class="main"
      d="M6 5C6 3.89543 6.89543 3 8 3H20L26 9V27C26 28.1046 25.1046 29 24 29H8C6.89543 29 6 28.1046 6 27V5Z"
      opacity="0.88"
    />
    <path
      d="M21 9L26 9L20 3L20 8C20 8.55229 20.4477 9 21 9Z"
      fill="#fff"
      opacity="0.32"
    />
    <path
      d="M25.1667 9L21 9L26 15L26 9C25.5833 9 25.6269 9 25.1667 9Z"
      fill="black"
      opacity="0.24"
    />
    <g
      opacity="0.8"
    >
      <path
        d="M9 22H23V24H9V22Z"
        fill="#fff"
      />
      <path
        d="M9 18H19V20H9V18Z"
        fill="#fff"
      />
    </g>
  </svg>
</div>
`;
